--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -777,13 +777,14 @@
             const thinkingId = this.addThinkingMessage();
 
             try {
-                // Choose endpoint based on CLI mode
-                const endpoint = this.cliMode ? '/api/chat/cli' : '/api/chat';
+                // Always use /api/chat endpoint
+                const endpoint = '/api/chat';
 
                 // Make actual API call to backend
                 const response = await fetch(endpoint, {
                     method: 'POST',
                     headers: {
+
                         'Content-Type': 'text/plain',
                         'Accept': 'text/plain'
                     },
